Fixing logo from being stretched vertically

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -7,7 +7,7 @@
 
 .auth-wrapper .auth-header .logo img {
     width: 100px;
-    height: fit-content;
+    height: 110px;
 
     user-select: none;
 
